--- a/kathryn/bulk_data/q2_3_investigation/q2_3_pipeline_ref_alt.Rmd
+++ b/kathryn/bulk_data/q2_3_investigation/q2_3_pipeline_ref_alt.Rmd
@@ -37,48 +37,28 @@ x2 <- in_alt_not_ref_unique_SNP[!duplicated(in_alt_not_ref_unique_SNP),] # 72078
 
 a_gene_snp <- fread("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_output/a_gene_snp.txt") # 925540 x 14
 a_gene_snp$SNPWindow <- paste("chromosome:GRCh37:",a_gene_snp$SNPChr, ":", a_gene_snp$SNPWindowStart, ":", a_gene_snp$SNPWindowEnd,":1", sep="") # 925540 x 15
-
-# null_ref <- fread("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_input/homer_master_ref.txt", sep='\t', header=T)
-# colnames(null_ref) <- c("SNPWindow", "ref_Offset", "Sequence", "Motif Name", "ref_Strand", "ref_MotifScore")
-# null_ref <- null_ref[!duplicated(null_ref),]
-# null_ref$SNPWindow <- gsub("\\-.*", "", null_ref$SNPWindow) # if necessary
-# null_alt <- fread("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_input/homer_master_alt.txt", sep='\t', header=T)
-# colnames(null_alt) <- c("SNPWindow", "alt_Offset", "Sequence", "Motif Name", "alt_Strand", "alt_MotifScore")
-# null_alt <- null_alt[!duplicated(null_alt),]
-# null_alt$SNPWindow <- gsub("\\-.*", "", null_alt$SNPWindow) # if necessary
-# 
-# x1 <- null_ref
-# x2 <- null_alt
-
 ```
 
 Using only motifs on positive strands, sort motifs by Motif Score
 Change # data points with value of n in z_test_group
 ```{r get_samples}
 
-x1_s <- x1 %>% sample_n(800) #x1[!duplicated(x1$"Motif Name"), ] # 423 x8
-x2_s <- x2 %>% sample_n(800)#x2[!duplicated(x2$"Motif Name"), ] # 422 x 8
+# x1_s <- x1 %>% sample_n(800)
+# x2_s <- x2 %>% sample_n(800)
+# fwrite(x1_s, "q2_3_output/x1_s_ref.txt", sep="\t")
+# fwrite(x2_s, "q2_3_output/x2_s_alt.txt", sep="\t")
 
-# z <- inner_join(x1_s[x1_s$"ref_Strand" == "+",], x2_s[x2_s$"alt_Strand" == "+",], by="Motif Name") # 925540 x 9
+x1_s <- fread("q2_3_output/x1_s_ref.txt", sep='\t')
+x2_s <- fread("q2_3_output/x2_s_alt.txt", sep='\t')
 
 z <- x1_s[x1_s$"ref_Strand" == "+",]
-z_test_group_ref <- z[order(z$"ref_MotifScore", decreasing=F),]
-# z_test_group_ref <- tail(z[order(z$"ref_MotifScore", decreasing=F),], n=126L) # 237 x 15
-#z_test_group$alt_Offset <- z_test_group$alt_Offset + 21
-#z_test_group$ref_Offset <- z_test_group$ref_Offset + 21
+ref_test_group <- z[order(z$"ref_MotifScore", decreasing=F),]
 
 z <- x2_s[x2_s$"alt_Strand" == "+",]
-z_test_group_alt <- z[order(z$"alt_MotifScore", decreasing=F),]
-# z_test_group_alt <- tail(z[order(z$"alt_MotifScore", decreasing=F),], n=215L) # 215 x 15
+alt_test_group <- z[order(z$"alt_MotifScore", decreasing=F),]
 
 ```
 
-```{r test_group_data}
-ref_test_group <- x1_s[x1_s$"Motif Name" %in% z_test_group_ref$"Motif Name"] # 237 x 8 
-alt_test_group <- x2_s[x2_s$"Motif Name" %in% z_test_group_alt$"Motif Name"] # 215 x 8
-
-# Note: ref_test_group[1,"Motif Name"] != ref_test_group$`Motif Name`[1]
-```
 
 Todo: detect # motifs without hardcoding it in
 
@@ -89,7 +69,7 @@ Todo: detect # motifs without hardcoding it in
 motifs_table <- data.frame(read.table("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif1.motif", sep="\t", header=F,nrow=1)[,2])
 colnames(motifs_table) <- "Motif Name"
 
-n = 426
+n = 429
 for (i in 2:n){
   z <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", i, ".motif", sep=""), sep="\t", header=F,nrow=1)[,2]
   z <- data.frame(z)
@@ -99,19 +79,18 @@ for (i in 2:n){
 
 motifs_table <- cbind(motifs_table, 1:n)
 colnames(motifs_table)[2] <- "Num"
-# 426 x 2
+# 429 x 2
 
 ```
 
 ```{r match_motifs_with_test_groups_ref}
  
-ref_test_group_file <- left_join(ref_test_group, motifs_table) # 11 x 9
-ref_test_group_file$ref_Offset <- ref_test_group_file$ref_Offset + 21
+ref_test_group_file <- left_join(ref_test_group, motifs_table) # 10051 x 9
 ref_test_group_file$SNPPosInFasta <- 0.001 
 
-ref_test_group_with_fasta <- merge(ref_test_group, a_gene_snp) # also by 'SNP'
-ref_test_group_with_fasta$ref_Offset <- ref_test_group_with_fasta$ref_Offset+21
-ref_test_group_with_fasta <- ref_test_group_with_fasta[which(str_sub(ref_test_group_with_fasta$fasta_seq_og, 21, 21) == ref_test_group_with_fasta$OtherAllele), ] # 37x20, only necessary if you didn't use old a_gene_snp file for homer input
+ref_test_group_with_fasta <- left_join(ref_test_group_file, a_gene_snp[!duplicated(a_gene_snp$fasta_seq_og),]) # also by 'SNP'
+ref_test_group_with_fasta$ref_Offset <- ref_test_group_with_fasta$ref_Offset + 21
+ref_test_group_with_fasta <- ref_test_group_with_fasta[which(str_sub(ref_test_group_with_fasta$fasta_seq_og, 21, 21) == ref_test_group_with_fasta$OtherAllele), ] # only necessary if you didn't use old a_gene_snp file for homer input
 counter_of_excluded_data <- 0
 
 ```
@@ -121,50 +100,36 @@ counter_of_excluded_data <- 0
 i=1
 
 ## make_PWM_and_get_motif_sequence_for_1_motif
-impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
+impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_with_fasta[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
 colnames(impt_table) <- c("A", "C", "G", "T")
 max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
 colnames(max_TF_motifs) <- c("Num", "Index", "Base")
 tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
 
-## get_fasta_seq_and_get_rid_of_matches_that_do_not_work: Where does the SNP hit the TF? for alt_test_group: I think eQTLGen is zero-indexed.
-
-## see_where_TF_hits_fasta_seq
-motif_w_fasta_seq_info <- ref_test_group_with_fasta[which(ref_test_group_with_fasta$"Motif Name" == ref_test_group_file[i,"Motif Name"]),]
-motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for fasta seq
-
-## does_TF_hit_SNP_if_so_get_position
-
-if (motif_w_fasta_seq_info$ref_Offset[i] >= (21 - nchar(tf_motif)) & motif_w_fasta_seq_info$ref_Offset != 21)
+if (ref_test_group_with_fasta$ref_Offset[i] >= (21 - nchar(tf_motif)) & ref_test_group_with_fasta$ref_Offset[i] < 21)
 {
-    ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
-    all_snp_pwms_ref <- max_TF_motifs[21 - motif_w_fasta_seq_info$ref_Offset[i], ] # make this rbind later
-    all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i) # make this cbind later
+    ref_test_group_with_fasta$SNPPosInFasta[i] <- 21 - ref_test_group_with_fasta$ref_Offset[i]+1
+    all_snp_pwms_ref <- max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[i], ] # make this rbind later
+    all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i, ref_test_group_with_fasta[i,]) # make this cbind later
 } else {
-  all_snp_pwms_ref <- data.table(NA, NA, NA, i) # to begin
-  colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base", "i")
+  all_snp_pwms_ref <- data.table(NA, NA, NA, i, ref_test_group_with_fasta[i]) # to begin
+  colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base", "i", colnames(ref_test_group_with_fasta))
   counter_of_excluded_data <- counter_of_excluded_data + 1
 }
     
-for (i in 2:nrow(ref_test_group_file)){
-  impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
+for (i in 2:nrow(ref_test_group_with_fasta)){
+  impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_with_fasta[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
   colnames(impt_table) <- c("A", "C", "G", "T")
   max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
   colnames(max_TF_motifs) <- c("Num", "Index", "Base")
   tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")  # CATGCATATGCATAT
   
-  ## get_fasta_seq_and_get_rid_of_matches_that_do_not_work: Where does the SNP hit the TF? for ref_test_group: I think eQTLGen is zero-indexed.
-  
-  ## see_where_TF_hits_fasta_seq
-  motif_w_fasta_seq_info <- ref_test_group_file[which(ref_test_group_file$"Motif Name" == ref_test_group_file[i,"Motif Name"]),]
-  motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for fasta seq
-  
   ## does_TF_hit_SNP_if_so_get_position
-  # plot(max_TF_motifs$Num)
-  if (motif_w_fasta_seq_info$ref_Offset[1] > (21 - nchar(tf_motif)) & motif_w_fasta_seq_info$ref_Offset != 21) # if offset = 21, skip this
+  if (ref_test_group_with_fasta$ref_Offset[i] >= (21 - nchar(tf_motif)) & ref_test_group_with_fasta$ref_Offset[i] < 21) # if offset = 21, skip this
   {
-      ref_test_group_file$SNPPosInFasta[i] <- 21 - motif_w_fasta_seq_info$ref_Offset[1]
-      row_to_bind <- data.frame(max_TF_motifs[21 - motif_w_fasta_seq_info$ref_Offset[1], ], i)
+      ref_test_group_with_fasta$SNPPosInFasta[i] <- 21 - ref_test_group_with_fasta$ref_Offset[i]
+      row_to_bind <- data.frame(max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[i], ], i, ref_test_group_with_fasta[i,])
+      colnames(row_to_bind) <- colnames(all_snp_pwms_ref)
       all_snp_pwms_ref <- rbind(all_snp_pwms_ref, row_to_bind)
   } else {
     counter_of_excluded_data <- counter_of_excluded_data + 1
@@ -172,22 +137,15 @@ for (i in 2:nrow(ref_test_group_file)){
 }
 
 all_snp_pwms_ref <- all_snp_pwms_ref[!is.na(all_snp_pwms_ref$Num),]
-  
+
 ```
 
 ```{r visualize_likelihood_ref}
 
-# hist(all_snp_pwms$Num) # all_snp_pwms %>% count(Num)
-
-# mean = blue dashed line, density plot = red transparent
+colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base", "i", "SNPWindow", "Offset", "Sequence", "Motif Name", "Strand", "MotifScore", "Num1", "SNPPosInFasta", "Gene", "GeneSymbol", "GeneChr", "GenePos", "SNP", "SNPChr", "SNPPos", "AssessedAllele", "OtherAllele", "SNPWindowStart", "SNPWindowEnd", "fasta_seq_og", "fasta_seq_mod")
 
 ggplot(all_snp_pwms_ref, aes(x=as.numeric(Num))) + 
-  #stat_count() +
   geom_histogram(binwidth=.1, color="black", fill="blue") +
-  #y_lim(0, 4)
-  #xlim(0, 1)+
-  #geom_text(aes(label=Base), hjust=2, vjust=1) + 
-  #geom_point(data = max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[1],], x=Index, y = Num) +
   theme_stata() +
   geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
   geom_vline(aes(xintercept=mean(as.numeric(Num))),
@@ -200,12 +158,11 @@ For alt
 
 ```{r match_motifs_with_test_groups_alt}
 
-alt_test_group_file <- left_join(alt_test_group, motifs_table) # 11 x 9
-alt_test_group_file$alt_Offset <- alt_test_group_file$alt_Offset + 21
+alt_test_group_file <- left_join(alt_test_group, motifs_table) # 9901 x 9
 alt_test_group_file$SNPPosInFasta <- 0.001 
 
-alt_test_group_with_fasta <- merge(alt_test_group, a_gene_snp) # also by 'SNP'
-alt_test_group_with_fasta$alt_Offset <- alt_test_group_with_fasta$alt_Offset+21
+alt_test_group_with_fasta <- left_join(alt_test_group_file, a_gene_snp[!duplicated(a_gene_snp$fasta_seq_og),]) # also by 'SNP'
+alt_test_group_with_fasta$alt_Offset <- alt_test_group_with_fasta$alt_Offset + 21
 alt_test_group_with_fasta <- alt_test_group_with_fasta[which(str_sub(alt_test_group_with_fasta$fasta_seq_og, 21, 21) == alt_test_group_with_fasta$OtherAllele), ] # 37x20, only necessary if you didn't use old a_gene_snp file for homer input
 counter_of_excluded_data <- 0
 
@@ -216,7 +173,7 @@ counter_of_excluded_data <- 0
 i=1
 
 ## make_PWM_and_get_motif_sequence_for_1_motif
-impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", alt_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
+impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", alt_test_group_with_fasta[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
 colnames(impt_table) <- c("A", "C", "G", "T")
 max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
 colnames(max_TF_motifs) <- c("Num", "Index", "Base")
@@ -224,42 +181,31 @@ tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
 
 ## get_fasta_seq_and_get_rid_of_matches_that_do_not_work: Where does the SNP hit the TF? for alt_test_group: I think eQTLGen is zero-indexed.
 
-## see_where_TF_hits_fasta_seq
-motif_w_fasta_seq_info <- alt_test_group_with_fasta[which(alt_test_group_with_fasta$"Motif Name" == alt_test_group_file[i,"Motif Name"]),]
-motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for fasta seq
-
 ## does_TF_hit_SNP_if_so_get_position
-
-if (motif_w_fasta_seq_info$alt_Offset[i] >= (21 - nchar(tf_motif)) & motif_w_fasta_seq_info$alt_Offset != 21)
+if (alt_test_group_with_fasta$alt_Offset[i] >= (21 - nchar(tf_motif)) & alt_test_group_with_fasta$alt_Offset[i] < 21)
 {
-    alt_test_group_file$SNPPosInFasta[i] <- 21 - alt_test_group_file$alt_Offset[i]
-    all_snp_pwms_alt <- max_TF_motifs[21 - motif_w_fasta_seq_info$alt_Offset[i], ] # make this rbind later
-    all_snp_pwms_alt <- cbind(all_snp_pwms_alt, i) # make this cbind later
+    alt_test_group_with_fasta$SNPPosInFasta[i] <- 21 - alt_test_group_with_fasta$alt_Offset[i]+1
+    all_snp_pwms_alt <- max_TF_motifs[21 - alt_test_group_with_fasta$alt_Offset[i], ] # make this rbind later
+    all_snp_pwms_alt <- cbind(all_snp_pwms_alt, i, alt_test_group_with_fasta[i,]) # make this cbind later
 } else {
-  all_snp_pwms_alt <- data.table(NA, NA, NA, i) # to begin
-  colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base", "i")
+  all_snp_pwms_alt <- data.table(NA, NA, NA, i, alt_test_group_with_fasta[i,]) # to begin
+  colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base", "i", colnames(alt_test_group_with_fasta))
   counter_of_excluded_data <- counter_of_excluded_data + 1
 }
     
-for (i in 2:nrow(alt_test_group_file)){
-  impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", alt_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
+for (i in 2:nrow(alt_test_group_with_fasta)){
+  impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", alt_test_group_with_fasta[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
   colnames(impt_table) <- c("A", "C", "G", "T")
   max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
   colnames(max_TF_motifs) <- c("Num", "Index", "Base")
   tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")  # CATGCATATGCATAT
   
-  ## get_fasta_seq_and_get_rid_of_matches_that_do_not_work: Where does the SNP hit the TF? for alt_test_group: I think eQTLGen is zero-indexed.
-  
-  ## see_where_TF_hits_fasta_seq
-  motif_w_fasta_seq_info <- alt_test_group_file[which(alt_test_group_file$"Motif Name" == alt_test_group_file[i,"Motif Name"]),]
-  motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for fasta seq
-  
   ## does_TF_hit_SNP_if_so_get_position
-  # plot(max_TF_motifs$Num)
-  if (motif_w_fasta_seq_info$alt_Offset[1] > (21 - nchar(tf_motif)) & motif_w_fasta_seq_info$alt_Offset != 21) # if offset = 21, skip this
+  if (alt_test_group_with_fasta$alt_Offset[i] >= (21 - nchar(tf_motif)) & alt_test_group_with_fasta$alt_Offset[i] < 21) # if offset = 21, skip this
   {
-      alt_test_group_file$SNPPosInFasta[i] <- 21 - motif_w_fasta_seq_info$alt_Offset[1]
-      row_to_bind <- data.frame(max_TF_motifs[21 - motif_w_fasta_seq_info$alt_Offset[1], ], i)
+      alt_test_group_with_fasta$SNPPosInFasta[i] <- 21 - alt_test_group_with_fasta$alt_Offset[i]
+      row_to_bind <- data.frame(max_TF_motifs[21 - alt_test_group_with_fasta$alt_Offset[i], ], i, alt_test_group_with_fasta[i,])
+      colnames(row_to_bind) <- colnames(all_snp_pwms_alt)
       all_snp_pwms_alt <- rbind(all_snp_pwms_alt, row_to_bind)
   } else {
     counter_of_excluded_data <- counter_of_excluded_data + 1
@@ -271,9 +217,7 @@ all_snp_pwms_alt <- all_snp_pwms_alt[!is.na(all_snp_pwms_alt$Num),]
 
 ```{r visualize_likelihood_alt}
 
-# hist(all_snp_pwms$Num) # all_snp_pwms %>% count(Num)
-
-# mean = blue dashed line, density plot = red transparent
+colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base", "i", "SNPWindow", "Offset", "Sequence", "Motif Name", "Strand", "MotifScore", "Num1", "SNPPosInFasta", "Gene", "GeneSymbol", "GeneChr", "GenePos", "SNP", "SNPChr", "SNPPos", "AssessedAllele", "OtherAllele", "SNPWindowStart", "SNPWindowEnd", "fasta_seq_og", "fasta_seq_mod")
 
 ggplot(all_snp_pwms_alt, aes(x=as.numeric(Num))) + 
   geom_histogram(binwidth=.1, color="black", fill="blue") +
@@ -281,6 +225,6 @@ ggplot(all_snp_pwms_alt, aes(x=as.numeric(Num))) +
   geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
   geom_vline(aes(xintercept=mean(as.numeric(Num))),
             color="blue", linetype="dashed", size=1) + 
-  ggtitle("Likelihood of Interesting Motifs - Alternative Allele")
+  ggtitle("Likelihood of All Motifs - Alternative Allele")
 
 ```
