--- a/kathryn/bulk_data/q2_3_investigation/q2_3_pipeline_ref_alt.Rmd
+++ b/kathryn/bulk_data/q2_3_investigation/q2_3_pipeline_ref_alt.Rmd
@@ -109,8 +109,11 @@ tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
 if (ref_test_group_with_fasta$ref_Offset[i] >= (21 - nchar(tf_motif)) & ref_test_group_with_fasta$ref_Offset[i] < 21)
 {
     ref_test_group_with_fasta$SNPPosInFasta[i] <- 21 - ref_test_group_with_fasta$ref_Offset[i]+1
+    allele_pwms <- data.table(impt_table[ref_test_group_with_fasta$SNPPosInFasta[i], ref_test_group_with_fasta$AssessedAllele[i]],
+                              impt_table[ref_test_group_with_fasta$SNPPosInFasta[i], ref_test_group_with_fasta$OtherAllele[i]])
+    colnames(allele_pwms) <- c("AssessedPWM", "Other PWM")
     all_snp_pwms_ref <- max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[i], ] # make this rbind later
-    all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i, ref_test_group_with_fasta[i,]) # make this cbind later
+    all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i, ref_test_group_with_fasta[i,], allele_pwms) # make this cbind later
 } else {
   all_snp_pwms_ref <- data.table(NA, NA, NA, i, ref_test_group_with_fasta[i]) # to begin
   colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base", "i", colnames(ref_test_group_with_fasta))
@@ -128,7 +131,10 @@ for (i in 2:nrow(ref_test_group_with_fasta)){
   if (ref_test_group_with_fasta$ref_Offset[i] >= (21 - nchar(tf_motif)) & ref_test_group_with_fasta$ref_Offset[i] < 21) # if offset = 21, skip this
   {
       ref_test_group_with_fasta$SNPPosInFasta[i] <- 21 - ref_test_group_with_fasta$ref_Offset[i]
-      row_to_bind <- data.frame(max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[i], ], i, ref_test_group_with_fasta[i,])
+      allele_pwms <- data.table(impt_table[ref_test_group_with_fasta$SNPPosInFasta[i], ref_test_group_with_fasta$AssessedAllele[i]],
+                              impt_table[ref_test_group_with_fasta$SNPPosInFasta[i], ref_test_group_with_fasta$OtherAllele[i]])
+      colnames(allele_pwms) <- c("AssessedPWM", "Other PWM")
+      row_to_bind <- data.frame(max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[i], ], i, ref_test_group_with_fasta[i,], allele_pwms)
       colnames(row_to_bind) <- colnames(all_snp_pwms_ref)
       all_snp_pwms_ref <- rbind(all_snp_pwms_ref, row_to_bind)
   } else {
@@ -142,7 +148,7 @@ all_snp_pwms_ref <- all_snp_pwms_ref[!is.na(all_snp_pwms_ref$Num),]
 
 ```{r visualize_likelihood_ref}
 
-colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base", "i", "SNPWindow", "Offset", "Sequence", "Motif Name", "Strand", "MotifScore", "Num1", "SNPPosInFasta", "Gene", "GeneSymbol", "GeneChr", "GenePos", "SNP", "SNPChr", "SNPPos", "AssessedAllele", "OtherAllele", "SNPWindowStart", "SNPWindowEnd", "fasta_seq_og", "fasta_seq_mod")
+colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base", "i", "SNPWindow", "Offset", "Sequence", "Motif Name", "Strand", "MotifScore", "Num1", "SNPPosInFasta", "Gene", "GeneSymbol", "GeneChr", "GenePos", "SNP", "SNPChr", "SNPPos", "AssessedAllele", "OtherAllele", "SNPWindowStart", "SNPWindowEnd", "fasta_seq_og", "fasta_seq_mod", colnames(allele_pwms))
 
 ggplot(all_snp_pwms_ref, aes(x=as.numeric(Num))) + 
   geom_histogram(binwidth=.1, color="black", fill="blue") +
@@ -150,7 +156,7 @@ ggplot(all_snp_pwms_ref, aes(x=as.numeric(Num))) +
   geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
   geom_vline(aes(xintercept=mean(as.numeric(Num))),
             color="blue", linetype="dashed", size=1) + 
-  ggtitle("Likelihood of All Motifs - Reference Allele")
+  ggtitle("Likelihood of Interesting Motifs - Reference Allele")
 
 ```
 
@@ -185,11 +191,14 @@ tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
 if (alt_test_group_with_fasta$alt_Offset[i] >= (21 - nchar(tf_motif)) & alt_test_group_with_fasta$alt_Offset[i] < 21)
 {
     alt_test_group_with_fasta$SNPPosInFasta[i] <- 21 - alt_test_group_with_fasta$alt_Offset[i]+1
+    allele_pwms <- data.table(impt_table[alt_test_group_with_fasta$SNPPosInFasta[i], alt_test_group_with_fasta$AssessedAllele[i]],
+                              impt_table[alt_test_group_with_fasta$SNPPosInFasta[i], alt_test_group_with_fasta$OtherAllele[i]])
+    colnames(allele_pwms) <- c("AssessedPWM", "Other PWM")
     all_snp_pwms_alt <- max_TF_motifs[21 - alt_test_group_with_fasta$alt_Offset[i], ] # make this rbind later
-    all_snp_pwms_alt <- cbind(all_snp_pwms_alt, i, alt_test_group_with_fasta[i,]) # make this cbind later
+    all_snp_pwms_alt <- cbind(all_snp_pwms_alt, i, alt_test_group_with_fasta[i,], allele_pwms) # make this cbind later
 } else {
-  all_snp_pwms_alt <- data.table(NA, NA, NA, i, alt_test_group_with_fasta[i,]) # to begin
-  colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base", "i", colnames(alt_test_group_with_fasta))
+  all_snp_pwms_alt <- data.table(NA, NA, NA, i, alt_test_group_with_fasta[i,], allele_pwms) # to begin
+  colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base", "i", colnames(alt_test_group_with_fasta), colnames(allele_pwms))
   counter_of_excluded_data <- counter_of_excluded_data + 1
 }
     
@@ -204,7 +213,10 @@ for (i in 2:nrow(alt_test_group_with_fasta)){
   if (alt_test_group_with_fasta$alt_Offset[i] >= (21 - nchar(tf_motif)) & alt_test_group_with_fasta$alt_Offset[i] < 21) # if offset = 21, skip this
   {
       alt_test_group_with_fasta$SNPPosInFasta[i] <- 21 - alt_test_group_with_fasta$alt_Offset[i]
-      row_to_bind <- data.frame(max_TF_motifs[21 - alt_test_group_with_fasta$alt_Offset[i], ], i, alt_test_group_with_fasta[i,])
+      allele_pwms <- data.table(impt_table[alt_test_group_with_fasta$SNPPosInFasta[i], alt_test_group_with_fasta$AssessedAllele[i]],
+                              impt_table[alt_test_group_with_fasta$SNPPosInFasta[i], alt_test_group_with_fasta$OtherAllele[i]])
+      colnames(allele_pwms) <- c("AssessedPWM", "Other PWM")
+      row_to_bind <- data.frame(max_TF_motifs[21 - alt_test_group_with_fasta$alt_Offset[i], ], i, alt_test_group_with_fasta[i,], allele_pwms)
       colnames(row_to_bind) <- colnames(all_snp_pwms_alt)
       all_snp_pwms_alt <- rbind(all_snp_pwms_alt, row_to_bind)
   } else {
@@ -217,7 +229,7 @@ all_snp_pwms_alt <- all_snp_pwms_alt[!is.na(all_snp_pwms_alt$Num),]
 
 ```{r visualize_likelihood_alt}
 
-colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base", "i", "SNPWindow", "Offset", "Sequence", "Motif Name", "Strand", "MotifScore", "Num1", "SNPPosInFasta", "Gene", "GeneSymbol", "GeneChr", "GenePos", "SNP", "SNPChr", "SNPPos", "AssessedAllele", "OtherAllele", "SNPWindowStart", "SNPWindowEnd", "fasta_seq_og", "fasta_seq_mod")
+colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base", "i", "SNPWindow", "Offset", "Sequence", "Motif Name", "Strand", "MotifScore", "Num1", "SNPPosInFasta", "Gene", "GeneSymbol", "GeneChr", "GenePos", "SNP", "SNPChr", "SNPPos", "AssessedAllele", "OtherAllele", "SNPWindowStart", "SNPWindowEnd", "fasta_seq_og", "fasta_seq_mod", colnames(allele_pwms))
 
 ggplot(all_snp_pwms_alt, aes(x=as.numeric(Num))) + 
   geom_histogram(binwidth=.1, color="black", fill="blue") +
@@ -225,6 +237,68 @@ ggplot(all_snp_pwms_alt, aes(x=as.numeric(Num))) +
   geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
   geom_vline(aes(xintercept=mean(as.numeric(Num))),
             color="blue", linetype="dashed", size=1) + 
-  ggtitle("Likelihood of All Motifs - Alternative Allele")
+  ggtitle("Likelihood of Interesting Motifs - Alternative Allele")
 
 ```
+
+all_snp_pwms_alt: 90 x 25
+all_snp_pwms_ref: 77 x 25
+
+fill=factor(as.numeric(i), levels = c(0, 50, 100, 150, 200, 250, 300, 350), ordered=T)))
+
+```{r make_more_complex_ref}
+
+ggplot(all_snp_pwms_ref, aes(x=as.numeric(Num), fill=cut(as.numeric(i), 3))) + 
+     geom_histogram(binwidth=.1, color="black") +
+     theme_stata() +
+     geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
+     geom_vline(aes(xintercept=mean(as.numeric(Num))),
+                color="blue", linetype="dashed", size=1) + 
+     ggtitle("Likelihood of Interesting Motifs - Reference Allele") +
+     scale_fill_discrete(name="Motif Score") +
+     xlab("Num") +
+     ylab("Count")
+```
+
+
+```{r make_more_complex_alt}
+
+ggplot(all_snp_pwms_alt, aes(x=as.numeric(Num), fill=cut(as.numeric(i), 3))) + 
+     geom_histogram(data=all_snp_pwms_alt, binwidth=.1, color="black") +
+     scale_fill_discrete(name="Motif Score") +
+     theme_stata() +
+     geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
+     geom_vline(aes(xintercept=mean(as.numeric(Num))),
+                color="blue", linetype="dashed", size=1) + 
+     ggtitle("Likelihood of Interesting Motifs - Alternative Allele") +
+     scale_fill_discrete(name="Motif Score") +
+     xlab("Num") +
+     ylab("Count")
+
+```
+
+Plot the sequence score of the motif with the ref allele versus the sequence score of the motif with the alt allele. I think we should do this!
+What would be even easier to plot is 1) among motifs found when the SNP was flipped to alt, the PWM probability of the ref allele versus the PWM probability of the alt allele
+And 2) vice versa for motifs found when snp was flipped to ref
+What you have is already halfway there!
+Just a thought - maybe better to not spend time chasing this and better to focus on LD pruning :)
+
+Include other information
+
+```{r further_exploration_alt}
+
+df2 <- melt(data.frame(all_snp_pwms_alt[, c("SNPWindow", "AssessedPWM", "Other PWM")], id.vars='SNPWindow'))
+ggplot(df2, aes(x=SNPWindow, y=value, fill=variable)) +
+    geom_bar(stat='identity', position='dodge')
+
+```
+
+```{r further_exploration_ref}
+
+df2 <- melt(data.frame(all_snp_pwms_ref[, c("SNPWindow", "AssessedPWM", "Other PWM")], id.vars='SNPWindow'))
+ggplot(df2, aes(x=SNPWindow, y=value, fill=variable)) +
+    geom_bar(stat='identity', position='dodge')
+
+```
+
+
