--- a/kathryn/bulk_data/finemapping/finemapping1.Rmd
+++ b/kathryn/bulk_data/finemapping/finemapping1.Rmd
@@ -27,21 +27,72 @@ fwrite(data.table(chr1_cis_useful$SNP, chr1_cis_useful$Zscore), "Zscore_file_ACB
 
 ```
 
-```{r write_plinke_files_from_computer}
+```{r prepare_plink_data}
 
 snpInfoDir <- system.file("extdata/snpInfo",
                           package = "snpEnrichment")
 
-SNPs_Pvalues <- data.table(chr1_cis_useful$SNP, chr1_cis_useful$Pvalue)
-colnames(SNPs_Pvalues) <- c("SNP", "PVALUE")
-fwrite(SNPs_Pvalues, "/Users/kathryntsai/OneDrive - Villanova University/College/2018-2019/Summer 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/signalFile.txt", sep="\t", quote=F)
+signalFile <- system.file("extdata/Signal/toySignal.txt", package = "snpEnrichment")
+# signalFile <- "/Users/kathryntsai/OneDrive - Villanova University/College/2018-2019/Summer 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/signalFile.txt"
 
-signalFile <- "/Users/kathryntsai/OneDrive - Villanova University/College/2018-2019/Summer 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/signalFile.txt"
+# SNPs_Pvalues <- data.table(chr1_cis_useful$SNP, chr1_cis_useful$Pvalue)
+# colnames(SNPs_Pvalues) <- c("SNP", "PVALUE")
+# fwrite(SNPs_Pvalues, "/Users/kathryntsai/OneDrive - Villanova University/College/2018-2019/Summer 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/signalFile.txt", sep="\t", quote=F)
 
-ldDir <- "/Users/kathryntsai/OneDrive - Villanova University/College/2018-2019/Summer 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping"
+initFiles(pattern = "Chrom", snpInfoDir, signalFile, mc.cores = 1)
 
 writeLD(pattern = "Chrom", snpInfoDir, signalFile, 
-        ldDir, ldThresh = 0.8, depth = 1000)
+        ldDir=NULL, ldThresh = 0.8, depth = 1000)
+
+```
+
+```{r read_plink_data}
+
+# ldDir <- "/Users/kathryntsai/OneDrive - Villanova University/College/2018-2019/Summer 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping"
+
+snpListDir <- system.file("extdata/List", package = "snpEnrichment")
+data(transcript)
+transcriptFile <- transcript
+
+toyData <- readEnrichment(
+    pattern = "Chrom", signalFile, transcriptFile, snpListDir, snpInfoDir,
+    distThresh = 1000, sigThresh = 0.05, LD = TRUE, ldDir = NULL,
+    mc.cores = 1
+)
+
+toyData
+
+```
+
+
+```{r compute_plink_results}
+
+reSample(object = toyData,
+         nSample = 10,
+         empiricPvalue = TRUE,
+         MAFpool = c(0.05, 0.10, 0.2, 0.3, 0.4, 0.5),
+         mc.cores = 1,
+         onlyGenome = TRUE)
+
+```
+
+
+```{r exclude_snp_from_original_list}
+
+excludeFile <- system.file("extdata/Exclude/toyExclude.txt", package = "snpEnrichment")
+toyData_exclude <- excludeSNP(toyData, excludeFile, mc.cores = 1)
+
+```
+
+```{r watch_results}
+
+show(toyData)
+print(toyData)
+head(getEnrichSNP(toyData, type = "xSNP"))
+
+show(toyData_exclude)
+print(toyData_exclude)
+head(getEnrichSNP(toyData_exclude, type = "eSNP"))
 
 ```
 
